was added support different encoding

--- a/src/main/resources/log4j2.yaml
+++ b/src/main/resources/log4j2.yaml
@@ -31,6 +31,7 @@ Configutation:
       level: debug
       AppenderRef:
         - ref: Console_Appender
+        - ref: File_Appender
     Logger:
       - name: ru.aklementev.html.parser.log4j2yaml
         additivity: false
