--- a/src/main/resources/log4j2.yaml
+++ b/src/main/resources/log4j2.yaml
@@ -3,43 +3,38 @@ Configutation:
   Properties:
     Property:
       name: log-path
-      value: "build/logs"
+      value: "logs"
   Appenders:
     Console:
       name: Console_Appender
       target: SYSTEM_OUT
+      Filters:
+        ThresholdFilter:
+          - level: error
+            onMatch: DENY
+            onMismatch: NEUTRAL
+          - level: warn
+            onMatch: DENY
+            onMismatch: NEUTRAL
       PatternLayout:
         pattern: "[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n"
     File:
       name: File_Appender
       fileName: ${log-path}/protocol.log
+      Filters:
+        ThresholdFilter:
+          - level: error
+            onMatch: ACCEPT
+            onMismatch: NEUTRAL
+          - level: warn
+            onMatch: ACCEPT
+            onMismatch: DENY
       PatternLayout:
         pattern: "[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n"
-    RollingFile:
-      - name: RollingFile_Appender
-        fileName: ${log-path}/rollingfile.log
-        filePattern: "logs/archive/rollingfile.log.%d{yyyy-MM-dd-hh-mm}.gz"
-        PatternLayout:
-          pattern: "[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n"
-        Policies:
-          SizeBasedTriggeringPolicy:
-            size: 1 KB
-        DefaultRollOverStrategy:
-          max: 30
   Loggers:
     Root:
-      level: debug
+      level: info
       AppenderRef:
         - ref: Console_Appender
         - ref: File_Appender
-    Logger:
-      - name: ru.aklementev.html.parser.log4j2yaml
-        additivity: false
-        level: debug
-        AppenderRef:
-          - ref: Console_Appender
-            level: info
-          - ref: File_Appender
-            level: info
-          - ref: RollingFile_Appender
-            level: debug
+
