--- a/version.gradle
+++ b/version.gradle
@@ -2,6 +2,7 @@ ext {
     versions = [
             'jupiter': '5.7.0',
             'log4j'  : '2.14.1',
-            'jackson': '2.12.3'
+            'jackson': '2.12.3',
+            'guice'  : '5.0.1'
     ]
 }
